2013-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (MosaicImages): Fix unsigned underflow
	problem with -mosaic when page offset is negative and exceeds
	image width or height.  This problem caused assertions, out of
	memory errors, or pixel cache limit errors due to requesting an
	image of outrageous size.

2013-08-26  Jaroslav Fojtik  <JaFojtik@seznam.cz>
        * dcraw\dcraw.c Updated from autor
        * dcraw\dcraw.c.patch 

2013-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Fix SourceForge issue #237
	"Incorrect MAXVAL scaling when reading PAM images".

2013-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Improve error handling so that
	rendering bails on image access/update errors.  Resolves
	SourceForge issues #233 "Another SVG that hangs GraphicsMagick"
	and #232 "Another SVG that hangs GraphicsMagick".  The resolution
	of the bug is to return from image access/update error right away
	rather than adjusting the rendering density to produce a smaller
	image.

	* magick/error.h: Hide exception throwing convenience macros under
	MAGICK_IMPLEMENTATION definition.

	* Magick++/demo/demos.tap: Fix file naming for 'zoom' demos.

	* magick/annotate.c (RenderFreetype): Improve error handling so
	that rendering bails on image access/update errors.

2013-08-02  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): ping a png faster by
	returning the image without reading the pixel data.

2013-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): Only use ThumbnailImage()
	for DirectClass images in order to avoid a crash while creating
	the panner image.

2013-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* design/pixel-cache-struct.dot: Update structure relationships
	diagram.

	* design/pixel-cache.dot: Update call flow diagram.
