@@ -4108,7 +4108,25 @@ WriteTIFFImage(const ImageInfo *image_info,Image *image)
         uncompressed data.
       */
       scanline_size=TIFFScanlineSize(tiff);
-      rows_per_strip=Max(TIFFDefaultStripSize(tiff,0),1);
+      rows_per_strip=TIFFDefaultStripSize(tiff,0);
+      /*
+        It seems that some programs fail to handle more than 32K or
+        64K strips in an image due to using a 16-bit strip counter.
+        The solution is to use a larger strip size.  This approach
+        might cause excessively large strips for mega-sized images and
+        someday we may remove the solution since the problematic
+        readers will have expired.
+      */
+      if ((image->rows/rows_per_strip) > 32767)
+        rows_per_strip=image->rows/32768;
+      if (rows_per_strip < 1)
+        rows_per_strip=1;
+
+      /*
+        FIXME: it seems that some programs fail to handle more than
+        32K or 64K strips in an image due to using a 16-bit strip
+        counter.  The solution is to use a larger strip size.
+      */
 
       switch (compress_tag)
         {
@@ -4132,11 +4150,15 @@ WriteTIFFImage(const ImageInfo *image_info,Image *image)
         case COMPRESSION_ADOBE_DEFLATE:
           {
             /*
-              Deflate strips compress better up to 32K of data.
+              Deflate strips compress better up to 32K of data
+              (enlarge if necessary)..
             */
-            rows_per_strip = (uint32) (32*1024) / Max(scanline_size,1);
-            if (rows_per_strip < 1)
-              rows_per_strip=1;
+            unsigned int
+              proposed_rows_per_strip;
+
+            proposed_rows_per_strip = (uint32) (32*1024) / Max(scanline_size,1);
+            if (proposed_rows_per_strip > rows_per_strip)
+              rows_per_strip=proposed_rows_per_strip;
             /*
               Use horizontal differencing (type 2) for images which are
               likely to be continuous tone.  The TIFF spec says that this
