@@ -1,5 +1,10 @@
 2013-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/tiff.c (WriteTIFFImage): Increase rows-per-strip as
+	required to try to avoid more than 32K strips per image since some
+	programs seem to use a 16-bit strip counter and fail with more
+	than 32K strips.  Problem was reported by Kevin Myers.
+
 	* magick/transform.c (MosaicImages): Fix unsigned underflow
 	problem with -mosaic when page offset is negative and exceeds
 	image width or height.  This problem caused assertions, out of
